--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "atob": "^2.0.3",
     "base64url": "^2.0.0",
     "btoa": "^1.1.2",
+    "chalk": "^2.3.0",
     "cli-table2": "^0.2.0",
     "dotenv": "^4.0.0",
     "ember-simple-auth": "^1.4.0",
