--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^4.0.0",
     "ember-simple-auth": "^1.4.0",
     "ember-simple-auth-token": "^2.1.0",
+    "fuzzy": "^0.1.3",
     "inquirer": "^4.0.1",
+    "inquirer-autocomplete-prompt": "^0.12.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
     "jwt-node": "^0.1.9"
