feat(slack-server): add simple slack action response

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_TOKEN=slack-app-token
+SLACK_VERIFICATION_TOKEN=slack-verification-token
 API_BASE_PATH=justin-api-base-endpoint
 
 email=your_login
