--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "taskr",
+    "clear": "taskr clear",
+    "flow": "flow"
+  },
+  "engines": {
+    "node": ">=8"
+  },
   "dependencies": {
     "atob": "^2.0.3",
+    "babel-runtime": "^6.26.0",
     "chalk": "^2.3.0",
     "cli-table2": "^0.2.0",
     "dotenv": "^4.0.0",
@@ -12,5 +21,17 @@
     "inquirer": "^4.0.1",
     "inquirer-autocomplete-prompt": "^0.12.1",
     "isomorphic-fetch": "^2.2.1"
+  },
+  "devDependencies": {
+    "@taskr/babel": "^1.1.0",
+    "@taskr/clear": "^1.1.0",
+    "@taskr/watch": "^1.1.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "flow-bin": "^0.65.0",
+    "taskr": "^1.1.0"
   }
 }
