wip on build setup - still not ideal
Would have liked to have source maps working correctly through the taskr babel,
but maybe there's actually an issue with how it's implemented.
Or, I don't get how it's suppose to be used and work.

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
-    "sourceMaps": "inline",
+    "sourceMaps": true,
+    // "sourceRoot": "./src",
     "comments": false,
     "presets": ["stage-1"],
-    "plugins": ["transform-runtime", "add-module-exports", "transform-flow-strip-types", "transform-es2015-modules-commonjs"]
+    "plugins": ["transform-runtime", "add-module-exports", "transform-flow-strip-types", "transform-es2015-modules-commonjs"],
+    // "sourceMapTarget": "filename"
+    // "filenameRelative": "filename"
 }
