--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "atob": "^2.0.3",
     "babel-runtime": "^6.26.0",
     "chalk": "^2.3.0",
+    "cli-color": "^1.2.0",
     "cli-table2": "^0.2.0",
+    "clui": "^0.3.6",
     "dotenv": "^4.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^4.0.1",
