test(justin-cli): setting up snapshot testing for actions

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
     "sourceMaps": true,
+    "ignore": [
+        "*.test.js",
+        "*.sandbox.js"
+    ],
     // "sourceRoot": "./src",
     "comments": false,
     "presets": ["stage-1"],
